# gemma-ios

./: .gitignore  .gitmodules  .swiftlint.yml  .travis.yml  CMakeLists.txt  Cartfile  Cartfile.private  Cartfile.resolved  Podfile  README.md
.travis/: AdHoc_gemma.mobileprovision  AppStore_gemma.mobileprovision  build.sh
Carthage/xcfilelists/: EOS-inputPaths.xcfilelist  EOS-outputPaths.xcfilelist
EOS/: AppDelegate.swift  EOS-Bridging-Header.h  Info.plist  ViewController.swift
EOS.xcodeproj/: project.pbxproj
EOS.xcworkspace/: contents.xcworkspacedata
EOS/AppCoordinator/: AppAction.swift  AppCoordinator.swift  AppReducer.swift  NavCoordinator.swift
EOS/Base/: BaseCollectionViewCell.swift  BaseNavigationController.swift  BaseTabbarViewController.swift  BaseTableViewCell.swift  BaseView.swift  BaseViewController.swift  BaseWebViewController.swift  EOSBaseView.swift
EOS/Base.lproj/: LaunchScreen.storyboard
EOS/Constants/: Constants.swift  Error.swift
EOS/Extensions/: Array+Extensions.swift  CGFloat+Extensions.swift  Colletion+Extensions.swift  Decimal+Extensions.swift  Dictionary+Extensions.swift  Double+Extensions.swift  Mirror+Extension.swift  NSObject+Extensions.swift  String+Extensions.swift  UIImage+Extensions.swift  UIImageView+Additions.swift  UIResponder+Extensions.swift  UIView+Extensions.swift  UIViewController+Extensions.swift
EOS/Localization/: Localzation+Extensions.swift
EOS/Managers/: CurrencyManager.swift  FingerManager.swift  MonkeyKingManager.swift  SafeManager.swift  WalletManager.swift
EOS/Models/: Account.swift  AccountModel.swift  Actions.swift  EOSIOTableRow.swift  NodeVote.swift  Order.swift  Payment.swift  Tokens.swift
EOSTests/: EOSTests-Bridging-Header.h  EOSTests.swift  RPCTest.swift
fastlane/: Appfile  Fastfile
keosdlib/: CMakeLists.txt  keosdlib.cpp
main/: CMakeLists.txt  main.cpp
scripts/: install.sh
(+973 files in other folders)
